--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,18 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.whatsapp">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.SMS_FINANCIAL_TRANSACTIONS"/>
+    <uses-permission android:name="android.permission.READ_SMS"/>
+    <uses-permission android:name="android.permission.RECEIVE_SMS"/>
 
     <application
+        android:usesCleartextTraffic="true"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.WhatsApp">
-        <activity android:name=".GroupChatActivity"></activity>
-        <activity android:name=".ChatDetailsActivity"></activity>
+        android:theme="@style/Theme.WhatsApp"
+        tools:targetApi="m">
+        <activity android:name=".SigninPhoneVerifyActivity"/>
+        <activity android:name=".SignInPhoneActivity" />
+        <activity android:name=".GroupChatActivity" />
+        <activity android:name=".ChatDetailsActivity" />
         <activity android:name=".SettingsActivity" />
         <activity android:name=".SignInActivity">
             <intent-filter>
